saves/test/demo_full_20240802_193545/fsm_serial/debug_2_reboot/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp fsm_serial_tb.v fsm_serial.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
fsm_serial_tb.v:158: $finish called at 1100000 (1ps)

iverilog cmd 2 error:

